force-app/main/default/objects/Transformation_Field__mdt/Transformation_Field__mdt.object-meta.xml
<CustomObject>
    <description>A field in a Transformation</description>
    <label>Transformation Field</label>
    <pluralLabel>Transformation Fields</pluralLabel>
</CustomObject>