force-app/main/default/objects/Transformation_Field__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>A class implementing nebc.Function to be run on values as they go from source to destination</description>
    <inlineHelpText>A class implementing nebc.Function to be run on values as they go from source to destination</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>