force-app/main/default/objects/Transformation_Field__mdt/fields/Apex_Class_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Parameters__c</fullName>
    <label>Apex Class Parameters</label>
    <type>TextArea</type>
</CustomField>