force-app/main/default/objects/Transformation_Field__mdt/fields/Reverse_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Apex_Class__c</fullName>
    <description>A class implementing nebc.Function to be run on values as they go from destination to source</description>
    <inlineHelpText>A class implementing nebc.Function to be run on values as they go from destination to source</inlineHelpText>
    <label>Reverse Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>