force-app/main/default/objects/Transformation_Field__mdt/fields/Reverse_Apex_Class_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Apex_Class_Parameters__c</fullName>
    <description>JSON values to be used to deserialise an instance of the given Reverse Apex Class, parameterising it</description>
    <inlineHelpText>JSON values to be used to deserialise an instance of the given Reverse Apex Class, parameterising it</inlineHelpText>
    <label>Reverse Apex Class Parameters</label>
    <type>TextArea</type>
</CustomField>