force-app/main/default/objects/Transformation_Field__mdt/fields/Reverse_Apex_Class_Receives__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Apex_Class_Receives__c</fullName>
    <defaultValue>&apos;Value&apos;</defaultValue>
    <description>If a Reverse Apex Class is specified, this value determines whether it is called with the value of the input field or a tuple of the metadata record and the whole input object</description>
    <inlineHelpText>If a Reverse Apex Class is specified, this value determines whether it is called with the value of the input field or a tuple of the metadata record and the whole input object</inlineHelpText>
    <label>Reverse Apex Class Receives</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
                <default>true</default>
                <label>Value</label>
            </value>
            <value>
                <fullName>Whole Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>