force-app/main/default/objects/Transformation_Field__mdt/fields/Transformation__c.field-meta.xml
<CustomField>
    <fullName>Transformation__c</fullName>
    <label>Transformation</label>
    <referenceTo>Transformation__mdt</referenceTo>
    <relationshipLabel>Transformation Fields</relationshipLabel>
    <relationshipName>Transformation_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>