force-app/main/default/objects/Transformation_Field__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Transformation__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Source_Field__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>Apex_Class_Parameters__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>